--- a/store/pom.xml
+++ b/store/pom.xml
@@ -73,7 +73,16 @@
             <artifactId>flyway-core</artifactId>
             <version>6.3.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>9.0.27</version>
+        </dependency>
     </dependencies>
 
 </project>
